# clvk

./: README_android.md  compile_android.sh  compile_android2.sh  results.txt
android_app/MyApplication/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android_app/MyApplication/app/src/androidTest/java/io/github/astarasikov/clvkandroid/clvktests/: ExampleInstrumentedTest.java
android_app/MyApplication/app/src/main/: AndroidManifest.xml
android_app/MyApplication/app/src/main/java/io/github/astarasikov/clvkandroid/clvktests/: MainActivity.java
android_app/MyApplication/app/src/main/jni/: jni_part.cpp
android_app/MyApplication/app/src/main/jni/clinfo/src/: clinfo.c  error.h
android_app/MyApplication/app/src/main/jni/intel_samples/BitonicSort/: BitonicSort.cpp
android_app/MyApplication/app/src/main/jni/intel_samples/common/: basic.cpp  basic.hpp  cmdparser.cpp  oclobject.cpp  oclobject.hpp  utils.cpp  utils.h  yuv_utils.cpp
android_app/MyApplication/app/src/main/res/layout/: activity_main.xml
android_app/MyApplication/app/src/main/res/values/: strings.xml
android_app/MyApplication/app/src/test/java/io/github/astarasikov/clvkandroid/clvktests/: ExampleUnitTest.java
src/: init.cpp  kernel.cpp  program.cpp
